interim fix for https://github.com/who-icatx/icatx-project/issues/111