@@ -1,24 +1,35 @@
 package edu.stanford.protege.webprotege.bulkop;
 
 import com.google.common.collect.ImmutableSet;
+import edu.stanford.protege.webprotege.DataFactory;
 import edu.stanford.protege.webprotege.access.AccessManager;
-import edu.stanford.protege.webprotege.change.*;
-import edu.stanford.protege.webprotege.common.*;
+import edu.stanford.protege.webprotege.change.ChangeListGenerator;
+import edu.stanford.protege.webprotege.change.RevisionReverterChangeListGeneratorFactory;
+import edu.stanford.protege.webprotege.common.ChangeRequestId;
+import edu.stanford.protege.webprotege.common.ProjectId;
 import edu.stanford.protege.webprotege.dispatch.AbstractProjectActionHandler;
 import edu.stanford.protege.webprotege.entity.OWLEntityData;
-import edu.stanford.protege.webprotege.hierarchy.*;
+import edu.stanford.protege.webprotege.hierarchy.ClassHierarchyCycleDetector;
+import edu.stanford.protege.webprotege.hierarchy.ClassHierarchyProvider;
+import edu.stanford.protege.webprotege.icd.LinearizationParentChecker;
 import edu.stanford.protege.webprotege.icd.ReleasedClassesChecker;
 import edu.stanford.protege.webprotege.icd.hierarchy.ClassHierarchyRetiredClassDetector;
 import edu.stanford.protege.webprotege.ipc.ExecutionContext;
 import edu.stanford.protege.webprotege.linearization.LinearizationManager;
 import edu.stanford.protege.webprotege.project.chg.ChangeManager;
 import edu.stanford.protege.webprotege.renderer.RenderingManager;
-import edu.stanford.protege.webprotege.revision.*;
-import org.semanticweb.owlapi.model.*;
-import org.slf4j.*;
+import edu.stanford.protege.webprotege.revision.RevisionManager;
+import edu.stanford.protege.webprotege.revision.RevisionNumber;
+import org.semanticweb.owlapi.model.IRI;
+import org.semanticweb.owlapi.model.OWLClass;
+import org.semanticweb.owlapi.model.OWLEntity;
+import org.semanticweb.owlapi.model.OWLNamedObject;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import javax.annotation.Nonnull;
 import javax.inject.Inject;
+import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
@@ -50,9 +61,6 @@ public class ChangeEntityParentsActionHandler extends AbstractProjectActionHandl
     private final RevisionManager revisionManager;
 
     @Nonnull
-    private final ClassHierarchyProvider classHierarchyProvider;
-
-    @Nonnull
     private final ClassHierarchyCycleDetector classCycleDetector;
 
     @Nonnull
@@ -70,6 +78,9 @@ public class ChangeEntityParentsActionHandler extends AbstractProjectActionHandl
     @Nonnull
     private final LinearizationManager linearizationManager;
 
+    @Nonnull
+    private final LinearizationParentChecker linParentChecker;
+
 
     @Inject
     public ChangeEntityParentsActionHandler(@Nonnull AccessManager accessManager,
@@ -79,11 +90,11 @@ public class ChangeEntityParentsActionHandler extends AbstractProjectActionHandl
                                             @Nonnull ClassHierarchyCycleDetector classCycleDetector,
                                             @Nonnull RevisionReverterChangeListGeneratorFactory revisionRevertFactory,
                                             @Nonnull RevisionManager revisionManager,
-                                            @Nonnull ClassHierarchyProvider classHierarchyProvider,
                                             @Nonnull RenderingManager renderingManager,
                                             @Nonnull ReleasedClassesChecker releasedClassesChecker,
                                             @Nonnull ClassHierarchyRetiredClassDetector retiredAncestorDetector,
-                                            @Nonnull LinearizationManager linearizationManager) {
+                                            @Nonnull LinearizationManager linearizationManager,
+                                            @Nonnull LinearizationParentChecker linParentChecker) {
         super(accessManager);
         this.projectId = checkNotNull(projectId);
         this.changeManager = checkNotNull(changeManager);
@@ -91,11 +102,11 @@ public class ChangeEntityParentsActionHandler extends AbstractProjectActionHandl
         this.classCycleDetector = checkNotNull(classCycleDetector);
         this.revisionManager = checkNotNull(revisionManager);
         this.reveisionReverterFactory = checkNotNull(revisionRevertFactory);
-        this.classHierarchyProvider = checkNotNull(classHierarchyProvider);
         this.renderingManager = checkNotNull(renderingManager);
         this.retiredAncestorDetector = retiredAncestorDetector;
         this.releasedClassesChecker = checkNotNull(releasedClassesChecker);
         this.linearizationManager = checkNotNull(linearizationManager);
+        this.linParentChecker = linParentChecker;
     }
 
     @Nonnull
@@ -108,15 +119,13 @@ public class ChangeEntityParentsActionHandler extends AbstractProjectActionHandl
     @Nonnull
     @Override
     public ChangeEntityParentsResult execute(@Nonnull ChangeEntityParentsAction action, @Nonnull ExecutionContext executionContext) {
+        var parentThatisLinearizationParent = linParentChecker.getParentThatIsLinearizationPathParent(action.entity().getIRI(), action.parents().stream().map(OWLClass::getIRI).collect(Collectors.toSet()));
+
+        if (parentThatisLinearizationParent.isPresent()) {
+            return getResultWithParentAsLinearizationPathParent(parentThatisLinearizationParent.get());
+        }
+
         var parents = action.parents().stream().map(OWLEntity::asOWLClass).collect(toImmutableSet());
-        var changeListGenerator = factory.create(action.changeRequestId(), parents, action.entity().asOWLClass(), action.commitMessage());
-
-        var currentParents = classHierarchyProvider.getParents(action.entity());
-        var newParents = action.parents();
-
-        var removedParents = getRemovedParents(action.entity(), action.parents());
-
-        linearizationManager.createLinearizationFromParent()
 
         if (releasedClassesChecker.isReleased(action.entity())) {
             var classesWithRetiredAncestors = this.retiredAncestorDetector.getClassesWithRetiredAncestors(parents);
@@ -125,6 +134,8 @@ public class ChangeEntityParentsActionHandler extends AbstractProjectActionHandl
                 return getResultWithRetiredAncestors(classesWithRetiredAncestors);
             }
         }
+
+        var changeListGenerator = factory.create(action.changeRequestId(), parents, action.entity().asOWLClass(), action.commitMessage());
 
         var result = changeManager.applyChanges(executionContext.userId(), changeListGenerator);
 
@@ -159,12 +170,12 @@ public class ChangeEntityParentsActionHandler extends AbstractProjectActionHandl
     }
 
     private ChangeEntityParentsResult validEmptyResult() {
-        return new ChangeEntityParentsResult(ImmutableSet.of(), ImmutableSet.of());
+        return new ChangeEntityParentsResult(ImmutableSet.of(), ImmutableSet.of(), Optional.empty());
     }
 
     private ChangeEntityParentsResult getResultWithCycles(Set<OWLClass> classes) {
         var owlEntityDataResult = getOwlEntityDataFromOwlClasses(classes);
-        return new ChangeEntityParentsResult(owlEntityDataResult, ImmutableSet.of());
+        return new ChangeEntityParentsResult(owlEntityDataResult, ImmutableSet.of(), Optional.empty());
     }
 
     private Set<OWLEntityData> getOwlEntityDataFromOwlClasses(Set<OWLClass> classes) {
@@ -175,6 +186,12 @@ public class ChangeEntityParentsActionHandler extends AbstractProjectActionHandl
 
     private ChangeEntityParentsResult getResultWithRetiredAncestors(Set<OWLClass> classes) {
         var owlEntityDataResult = getOwlEntityDataFromOwlClasses(classes);
-        return new ChangeEntityParentsResult(ImmutableSet.of(), owlEntityDataResult);
+        return new ChangeEntityParentsResult(ImmutableSet.of(), owlEntityDataResult, Optional.empty());
+    }
+
+    private ChangeEntityParentsResult getResultWithParentAsLinearizationPathParent(IRI parentIri) {
+        var parentClass = DataFactory.getOWLClass(parentIri);
+        var parentEntityDataResult = getOwlEntityDataFromOwlClasses(Set.of(parentClass)).stream().findFirst();
+        return new ChangeEntityParentsResult(ImmutableSet.of(), ImmutableSet.of(), parentEntityDataResult);
     }
 }
